New Livestock/Stockpond disaggregation Alg using ratio, write total ratio for potential triggers
Signed-off-by: Andrew Gilmore <andrew@precisionwre.com>